remove unnecessary depends, expand copyright info
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@10571 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/python-lzma/t
 
 Package: python-lzma
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, liblzma0
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
 Provides: ${python:Provides}
 Description: Python bindings for liblzma
  PylibLZMA provides a Python interface for the liblzma library for
