--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Package: python-lzma-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${misc:Depends}, python-lzma (= ${binary:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-lzma (= ${binary:Version})
 Description: python-lzma debug symbols 
  PylibLZMA provides a Python interface for the liblzma library for
  reading and writing data that has been compressed or can be
