--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: python-lzma
 Section: python
 Priority: optional
-Maintainer: Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
+Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Uploaders: Richard Darst <rkd@zgib.net>
 Build-Depends: debhelper (>= 7.0.50~), liblzma-dev, python-all-dev (>= 2.5.4-3~), python-setuptools, pkg-config, python-support, python-all-dbg (>= 2.5.4-3~)
 Standards-Version: 3.8.3
