--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Build-Depends: debhelper (>= 7.0.50~), liblzma-dev, python-all-dev (>= 2.5.4-3~)
 Standards-Version: 3.9.2
 XS-Python-Version: >= 2.6
 Homepage: https://launchpad.net/pyliblzma
-Vcs-Svn: svn://svn.debian.org/python-modules/packages/python-lzma/trunk
-Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/python-lzma/trunk
+Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk/
+Vcs-Browser: http://anonscm.debian.org/viewvc/python-modules/packages/python-lzma/trunk/
 
 Package: python-lzma
 Architecture: any
