Run tests only if DEB_BUILD_OPTIONS=nocheck is not set.
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@24795 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,9 @@ clean:
 override_dh_auto_test: $(PYVERS:%=test%)
 	dh_auto_test
 test%:
+ifeq "$(filter nocheck,$(DEB_BUILD_OPTIONS))" ""
 	python$* setup.py test
+endif
 
 # Multiple binary packages, must specify which to install files into.
 override_dh_auto_install:
