--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Uploaders: Richard Darst <rkd@zgib.net>
-Build-Depends: debhelper (>= 7.0.50~), liblzma-dev, python-all-dev (>= 2.5.4-3~), python-setuptools, pkg-config, python-support, python-all-dbg (>= 2.5.4-3~)
+Build-Depends: debhelper (>= 7.0.50~), dh-python, liblzma-dev, python-all-dev (>= 2.5.4-3~), python-setuptools, pkg-config, python-all-dbg (>= 2.5.4-3~)
 Standards-Version: 3.9.2
 XS-Python-Version: >= 2.6
 Homepage: https://launchpad.net/pyliblzma
