remove no longer needed pyshared→pymodules rename
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@33883 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
+#export DH_VERBOSE=1
 
 PYVERS=$(shell pyversions -vr debian/control)
 
@@ -30,7 +30,6 @@ override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
 override_dh_strip:
 	dh_strip --dbg-package=python-lzma-dbg
-	cd debian/*-dbg/usr/lib/debug/usr/lib && mv pyshared pymodules
 
 # debug package can refer to docs of depended-on binary package
 override_dh_installdocs:
