--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: python
 Priority: optional
 Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Uploaders: Richard Darst <rkd@zgib.net>
-Build-Depends: debhelper (>= 7.0.50~), dh-python, liblzma-dev, python-all-dev (>= 2.5.4-3~), python-setuptools, pkg-config, python-all-dbg (>= 2.5.4-3~)
-Standards-Version: 3.9.2
+Build-Depends: debhelper (>= 9), dh-python, liblzma-dev, python-all-dev (>= 2.6.6-3~), python-setuptools, pkg-config, python-all-dbg (>= 2.6.6-3~)
+Standards-Version: 3.9.8
 XS-Python-Version: >= 2.6
 Homepage: https://launchpad.net/pyliblzma
 Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk/
